# crave

./: CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  NOTICE  README.md
crave/: CMakeLists.txt  bootstrap.sh
crave/dependencies/Z3-4.6.0/: setup.sh  z3-z3-4.6.0__permutation_matrix.patch
crave/dependencies/boost-1_55_0-fs/: boost_1_55_0-20220228.patch  shared.sh
crave/dependencies/glog-git-0.3.3/: setup.sh
crave/metaSMT/: CMakeLists.txt
crave/src/crave/: ConstrainedRandom.hpp  RandomSeedManager.hpp  SystemC.hpp
crave/src/lib/: ComplexityEstimationVisitor.cpp  ConstrainedRandom.cpp  ConstrainedRandomInit.cpp  ConstraintManager.cpp  ConstraintPartition.cpp  ConstraintPartitioner.cpp  CraveSettings.cpp  Distribution.cpp  EvalVisitor.cpp  Evaluator.cpp  FixWidthVisitor.cpp  Generator.cpp  GetSupportSetVisitor.cpp  Operators.cpp  RandObjGenerator.cpp  RandomBase.cpp  RandomSeedManager.cpp  ReplaceVisitor.cpp  SettingType.cpp  ToDotNodeVisitor.cpp  UserConstraintType.cpp  UserVectorConstraint.cpp  VariableCoverageGenerator.cpp  VariableCoverageSolver.cpp  VariableDefaultSolver.cpp  VariableGeneratorMT.cpp  VariableGeneratorType.cpp  VariableSolver.cpp  VectorGenerator.cpp  metaSMTNodeVisitor.cpp  metaSMTNodeVisitorImpl.hpp  metaSMTNodeVisitorYices2.cpp
crave/tests/: CMakeLists.txt  boost_test.cpp
crave/tests/core/: solver_independent_tests.cpp  test_Constraint_Management.cpp  (+16 more)
doc/: DEVELOPMENT.md  RequirementsRandomization.xlsx
examples/ubus/: dut_dummy.h  sc_main.cpp  test_lib.h  ubus_example_master_seq_lib.h  ubus_example_scoreboard.cpp  ubus_example_scoreboard.h  ubus_example_tb.h
src/include/: crave2uvm.h  uvm_randomized_sequence.h  uvm_randomized_sequence_item.h
(+170 files in other folders)
